# sdPlatform

./: .clang-format  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  Doxyfile  foo.c  test.cmake
.github/workflows/: cmake.yml
cmake/: add-driver.cmake  arm32-t3-arm-linux-gnueabi.cmake  arm32-t3-arm-none-eabi.cmake  extract-lib.sh
cmake/drivers/: dummy.cmake  sunxi-uart.cmake
drivers/: foo.cxx
drivers/dummy/: CMakeLists.txt  dummy-test.cxx  dummy.cxx  parameter-test.cxx  runtime-test.cxx  syscall-test.cxx
drivers/sunxi-uart/: CMakeLists.txt  sunxi-uart-demo.cxx  sunxi-uart.cxx  sunxi-uart.h  xunsi-uart-demo.cxx
include/: devmgr.h  driver.h  log.h  platform-types.h  platform.h  requirements.h  type.h
include/internal/: btree.h  device-type.h  device.h  device.hxx  devmgr.h  dlist.h  dops.h  driver-type.h  driver.h  driver.hxx  mutex.h  parameter.hxx  runtime.hxx  toolchain.h  type.h  utils.hxx
include/internal/alter/: allocator.hxx  exception.hxx  list.hxx  map.hxx  string.hxx
include/internal/drivers/: i2c-bus.h
include/platform/: api.hxx  bits.hxx  cJSON.hxx  debug.hxx  device.hxx  driver-dummy.hxx  driver.hxx  entry.hxx  msg.hxx  msg_wrapper.hxx  os.hxx  parameter.hxx  remotecall.hxx  runtime.hxx  syscall-details.hxx  syscall.hxx  utils.hxx
include/platform/alter/: allocator.hxx  deque.hxx  exception.hxx  list.hxx  map.hxx  queue.hxx  string.hxx  vector.hxx
include/platform/drivers/: rcc.hxx  uart.hxx
source/: api-internal.cxx  arm32-embedded-sys.cxx  driver-ext.c  driver-int.c  foo.cpp  libc.cxx  requirements.cxx
source/internal/: device.c  device.cxx  devmgr.c  dops.c  driver.c  driver.cxx
source/internal/alter/: exception.cxx  list.cxx  map.cxx
source/internal/drivers/: i2c-bus.c
source/platform/: cJSON.cxx  device.cxx  driver.cxx  entry.cxx  os.cxx  remotecall.cxx  syscall-details.cxx  syscall.cxx
source/platform/alter/: exception.cxx  list.cxx  map.cxx
source/platform/drivers/: uart.cxx
tests/: cxx-test.cc  dlist.c  gpio-test.c
uml/: block.uxf
